--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "private": true,
   "license": "MIT",
-  "type": "module",
   "repository": {
     "type": "git",
-    "url": "https://github.com/doinel1a/astro-vanilla-ts"
+    "url": "https://github.com/kamilbrk/headunits"
   },
   "scripts": {
     "lint": "eslint src/**/*.{astro,js,jsx,ts,tsx}",
