Add Ksw-T-M700_OS_v1.4.4-ota and Ksw-T-M600_OS_v1.7.1-ota

--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,9 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/astro,intellij,visualstudiocode,macos,windows,node
+
+# OTA updates, zips and folders
+src/content/updates/*/*/*.zip
+src/content/updates/*/*/*/**
+public/bin/*
+!public/bin/.gitkeep
