--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@content/*": ["src/content/*"],
+      "@pages/*": ["src/pages/*"],
+      "@shared/*": ["src/shared/*"]
     }
   },
   "include": [
