--- a/package.json
+++ b/package.json
@@ -15,21 +15,23 @@
   },
   "dependencies": {
     "@astrojs/alpinejs": "^0.4.0",
+    "@astrojs/check": "^0.9.3",
     "@types/alpinejs": "^3.13.10",
     "alpinejs": "^3.14.1",
-    "astro": "^4.11.3",
-    "astro-heroicons": "^2.1.1"
+    "astro": "^4.15.7",
+    "astro-heroicons": "^2.1.5",
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^5.1.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
+    "@astrojs/tailwind": "^5.1.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.13",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.14.1",
-    "autoprefixer": "^10.4.19",
-    "cssnano": "^7.0.3",
+    "autoprefixer": "^10.4.20",
+    "cssnano": "^7.0.6",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^0.34.0",
@@ -39,11 +41,11 @@
     "eslint-plugin-sonarjs": "^0.25.1",
     "eslint-plugin-unicorn": "^50.0.1",
     "github-slugger": "^2.0.0",
-    "postcss": "^8.4.39",
-    "prettier": "^3.3.2",
-    "prettier-plugin-astro": "^0.14.0",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "sass": "^1.77.6",
-    "tailwindcss": "^3.4.4"
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "sass": "^1.79.1",
+    "tailwindcss": "^3.4.12"
   }
 }
