--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
   "dependencies": {
     "@astrojs/alpinejs": "^0.4.0",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "^4.0.2",
     "@types/alpinejs": "^3.13.10",
     "alpinejs": "^3.14.3",
-    "astro": "^5.0.0-beta.12",
+    "astro": "^5.0.5",
     "astro-heroicons": "^2.1.5",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/tailwind": "^5.1.3",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.9",
@@ -45,7 +46,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "sass": "^1.81.0",
-    "tailwindcss": "^3.4.15"
+    "sass": "^1.83.0",
+    "tailwindcss": "^3.4.16"
   }
 }
