--- a/package.json
+++ b/package.json
@@ -14,24 +14,22 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/alpinejs": "^0.4.0",
+    "@astrojs/alpinejs": "^0.4.3",
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^4.0.2",
+    "@astrojs/mdx": "^4.1.1",
+    "@tailwindcss/vite": "^4.0.13",
     "@types/alpinejs": "^3.13.10",
     "alpinejs": "^3.14.3",
-    "astro": "^5.0.5",
+    "astro": "^5.4.3",
     "astro-heroicons": "^2.1.5",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^5.1.3",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.9",
-    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/postcss": "^4.0.13",
+    "@tailwindcss/typography": "^0.5.16",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.6",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
@@ -45,8 +43,8 @@
     "postcss": "^8.4.49",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.9",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "sass": "^1.83.0",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^4.0.13"
   }
 }
